Fix module title size on mobile for Course theme

--- a/assets/css/learning-mode-compat.scss
+++ b/assets/css/learning-mode-compat.scss
@@ -52,3 +52,9 @@
 	font-size: 1rem;
 	line-height: 1.1875;
 }
+
+@media screen and (max-width: ($breakpoint - 1)) {
+	.sensei-lms-course-navigation-module__title {
+		font-size: 1.3125rem;
+	}
+}
