--- a/assets/css/sensei-course-theme/mobile.scss
+++ b/assets/css/sensei-course-theme/mobile.scss
@@ -63,10 +63,6 @@
 		}
 
 		/* Course Navigation */
-		.sensei-lms-course-navigation-module__title {
-			font-size: 1.3125rem;
-		}
-
 		.sensei-lms-course-navigation-lesson__title {
 			font-size: 1rem;
 		}
